--- a/app/src/main/res/layout/activity_add_car.xml
+++ b/app/src/main/res/layout/activity_add_car.xml
@@ -4,59 +4,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@color/darGray"
     android:layout_height="match_parent">
 
 
-    <EditText
-        android:id="@+id/make"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="@string/make" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/model"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:ems="10"
-        android:hint="@string/model" />
-    <EditText
-        android:id="@+id/carNumb"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:ems="10"
-        android:hint="@string/car_number" />
-    <ImageView
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:srcCompat="@drawable/ic_car_image_placeholder"
-        android:id="@+id/carImg"
-        tools:ignore="VectorDrawableCompat" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" > <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+            <SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/addcar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/add_car_to_list" />
+            <Button
+                android:id="@+id/sortBtn"
+                android:background="@drawable/ic_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sort" />
 
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/make"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textColorHint="@color/lightestGray"
+                android:inputType="text"
+                android:textColor="@color/lightestGray"
+                android:hint="@string/make" />
 
-    <Button
-        android:id="@+id/sortBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sort" />
+            <EditText
+                android:id="@+id/model"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:ems="10"
+                android:textColorHint="@color/lightestGray"
+                android:textColor="@color/lightestGray"
+                android:hint="@string/model" />
+            <EditText
+                android:id="@+id/carNumb"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/lightestGray"
+                android:textColor="@color/lightestGray"
+                android:inputType="text"
+                android:ems="10"
+                android:hint="@string/car_number" />
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                app:srcCompat="@drawable/ic_car_image_placeholder"
+                android:id="@+id/carImg"
+                tools:ignore="VectorDrawableCompat" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+            <Button
+                android:id="@+id/addcar"
+                android:background="@drawable/ic_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_car_to_list" /></LinearLayout>
+
+
+    </ScrollView>
+
+
+
+
 
 </LinearLayout>
