--- a/app/src/main/res/layout/activity_add_car.xml
+++ b/app/src/main/res/layout/activity_add_car.xml
@@ -20,10 +20,15 @@
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-            <SearchView
+            <android.support.v7.widget.SearchView
             android:id="@+id/searchView"
+                style="@style/SearchViewStyle"
+                android:outlineAmbientShadowColor="@color/lightestGray"
+                android:outlineSpotShadowColor="@color/lightestGray"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
 
             <Button
                 android:id="@+id/sortBtn"
