--- a/app/src/main/res/layout/activity_car_element.xml
+++ b/app/src/main/res/layout/activity_car_element.xml
@@ -94,9 +94,23 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_marginRight="15dp"
         android:text="@string/remove_image"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="25dp" />
+        android:layout_marginEnd="15dp" />
+
+    <Button
+        android:id="@+id/shareBtn"
+        android:layout_width="wrap_content"
+        android:background="@drawable/ic_button"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginLeft="15dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="15dp"
+        android:layout_toLeftOf="@+id/remove"
+        android:text="Share" />
 
 </RelativeLayout>
