--- a/app/src/main/res/layout/carslistitem.xml
+++ b/app/src/main/res/layout/carslistitem.xml
@@ -17,15 +17,16 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.AppCompatImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_marginLeft="5dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
             android:id="@+id/carimage"
             app:srcCompat="@drawable/ic_car_image_placeholder"
             tools:ignore="VectorDrawableCompat"
             android:focusableInTouchMode="false"
             android:clickable="false"
-            android:layout_marginStart="5dp" />
+            android:layout_marginStart="15dp" />
         <TextView
             android:id="@+id/make"
             android:layout_width="wrap_content"
@@ -33,39 +34,40 @@
             android:hint="@string/make"
             android:textColor="@color/darGray"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/carimage"
             android:textAlignment="center"
             android:textSize="18sp"
             android:layout_toEndOf="@id/carimage"
-            android:layout_marginStart="5dp" />
+            android:layout_marginStart="10dp" />
+        <TextView
+        android:hint="@string/model"
+        android:layout_below="@id/make"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/carimage"
+            android:layout_marginStart="10dp"
+        android:textColor="@color/yellow"
+        android:layout_width="wrap_content"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:id="@+id/model"
+        android:textSize="18sp"
+         />
 
         <TextView
             android:id="@+id/carNumb"
             android:hint="@string/car_number"
-            android:layout_below="@+id/model"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/carimage"
+            android:layout_marginStart="10dp"
+            android:layout_below="@+id/model"
             android:textAlignment="center"
-            android:layout_marginLeft="5dp"
             android:textColor="@color/darGray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:layout_toEndOf="@id/carimage"
-            android:layout_marginStart="5dp" />
+            />
 
-        <TextView
-            android:hint="@string/model"
-            android:layout_below="@id/make"
-            android:layout_toRightOf="@+id/carimage"
-            android:layout_marginLeft="5dp"
-            android:textColor="@color/yellow"
-            android:layout_width="wrap_content"
-            android:textAlignment="center"
-            android:layout_height="wrap_content"
-            android:id="@+id/model"
-            android:textSize="18sp"
-            android:layout_toEndOf="@+id/carimage"
-            android:layout_marginStart="5dp" />
+
     </RelativeLayout>
 </LinearLayout>
