--- a/app/src/main/res/layout/carslistlayout.xml
+++ b/app/src/main/res/layout/carslistlayout.xml
@@ -18,6 +18,25 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <Button
+                android:id="@+id/addcar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_button"
+                android:text="@string/add_new_car" />
+
+            <Button
+                android:id="@+id/buttonNew"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_button"
+                android:text="Repairs list" />
+            <Button
+                android:id="@+id/lab3Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_button"
+                android:text="Lab3" />
 
 
             <android.support.v7.widget.RecyclerView
@@ -25,12 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="742dp" />
 
-            <Button
-            android:id="@+id/addcar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-                android:background="@drawable/ic_button"
-            android:text="@string/add_new_car" />
+
 
 
         </LinearLayout>
