--- a/app/src/main/res/layout/firstactivitydesign.xml
+++ b/app/src/main/res/layout/firstactivitydesign.xml
@@ -19,6 +19,7 @@
         android:hint="@string/myemail_gmail_com"
         android:inputType="textEmailAddress"
         android:paddingStart="20dp"
+        android:textColor="@color/darGray"
         android:paddingLeft="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.127"
@@ -31,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:textColor="@color/darGray"
         android:background="@drawable/ic_text"
         android:hint="@string/paswdhint"
         android:inputType="textPassword"
